# Portfolio-RAG

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt  test_installation.py
.claude/: launch.json
chroma_db/: chroma.sqlite3
src/: document_processor.py  main.py  rag_system.py
vectorstore/: documents.json  embeddings.npy
