[project]
name = "portfolio-rag"
version = "0.1.0"
description = "FastAPI backend for portfolio chatbot with RAG system"
authors = [
  { name="Shubham Jagtap", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "fastapi",
  "uvicorn",
  "chromadb",
  "langchain",
  "langchain-chroma",
  "openai",
  "python-dotenv",
  "pydantic",
  "sentence-transformers",
  "tiktoken"
]

[tool.setuptools.packages.find]
where = ["src"]
